Merge origin/dev; note that the sweep predates the ZGC-as-default flip